--- a/index.html
+++ b/index.html
@@ -26,13 +26,34 @@
       <h2>Spending - Last 7 days</h2>
       <div class="chart">
         <div class="chart-bars">
-          <div class="bar-mon"></div>
-          <div class="bar-tue"></div>
-          <div class="bar-wed"></div>
-          <div class="bar-thu"></div>
-          <div class="bar-fri"></div>
-          <div class="bar-sat"></div>
-          <div class="bar-sun"></div>
+          <div class="bar-cont">
+            <div class="bar-price price-mon"></div>
+            <div class="bar-mon bar"></div>
+          </div>
+          <div class="bar-cont">
+            <div class="bar-price price-tue"></div>
+            <div class="bar-tue bar"></div>
+          </div>
+          <div class="bar-cont">
+            <div class="bar-price price-wed"></div>
+            <div class="bar-wed bar"></div>
+          </div>
+          <div class="bar-cont">
+            <div class="bar-price price-thu"></div>
+            <div class="bar-thu bar"></div>
+          </div>
+          <div class="bar-cont">
+            <div class="bar-price price-fri"></div>
+            <div class="bar-fri bar"></div>
+          </div>
+          <div class="bar-cont">
+            <div class="bar-price price-sat"></div>
+            <div class="bar-sat bar"></div>
+          </div>
+          <div class="bar-cont">
+            <div class="bar-price price-sun"></div>
+            <div class="bar-sun bar"></div>
+          </div>
         </div>
         <div class="week-days">
           <p>mon</p>
